Finition du design du speedQuizz

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="question1">Salut, ça va ?</string>
     <string name="ScoreJ1">0</string>
     <string name="ScoreJ2">0</string>
+    <string name="joy">－O－</string>
+    <string name="timer">STOP!!!</string>
 </resources>
