Le projet affiche les questions, mais encore du travail pour le système des points

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="ScoreJ2">0</string>
     <string name="joy">－O－</string>
     <string name="timer">Partez !!!</string>
+    <string name="fin">Terminé !!</string>
 </resources>
