Le jeu fonctionne !! Les points marchent !!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="ScoreJ2">0</string>
     <string name="timer">Partez !!!</string>
     <string name="fin">Terminé !!</string>
+    <string name="victoire">Victoire</string>
+    <string name="défaite">Défaite</string>
+    <string name="égalité">Egalité</string>
 </resources>
